<resources>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Heat</string>
    <string name="brush_size">Brush Size</string>
    <string name="brush_strength">Brush Strength</string>
    <string name="button_save">Save Settings</string>
    <string name="color_wheel_description">Touch the desired color on the wheel</string>
    <string name="heat_ka">Heat K Value</string>
    <string name="heat_hot">Hot Heat Color</string>
    <string name="heat_cold">Cold Heat Color</string>
</resources>
