<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.john.heat.SettingsActivity">

    <TextView
        android:id="@+id/textViewBrSize"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_element_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/brush_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewBrStrength"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_element_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/brush_strength"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBrSize" />

    <SeekBar
        android:id="@+id/seekBarBrSize"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="@dimen/seek_bar_width"
        android:layout_height="@dimen/settings_element_height"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:max="@integer/seekbar_max"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBarBrStrength"
        android:layout_width="@dimen/seek_bar_width"
        android:layout_height="@dimen/settings_element_height"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:max="@integer/seekbar_max"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarBrSize" />

    <TextView
        android:id="@+id/textViewHeatK"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_element_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/heat_ka"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBrStrength" />

    <SeekBar
        android:id="@+id/seekBarHeatK"
        android:layout_width="@dimen/seek_bar_width"
        android:layout_height="@dimen/settings_element_height"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:max="@integer/seekbar_max"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarBrStrength" />

    <TextView
        android:id="@+id/textViewHot"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_element_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/heat_hot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeatK" />

    <ImageView
        android:id="@+id/imageViewHot"
        android:layout_width="@dimen/settings_color_wheel"
        android:layout_height="@dimen/settings_color_wheel"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/color_wheel_description"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarHeatK"
        app:srcCompat="@mipmap/ic_color_wheel"
        tools:layout_editor_absoluteX="176dp" />

    <TextView
        android:id="@+id/textViewCold"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_element_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/heat_cold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHot" />

    <ImageView
        android:id="@+id/imageViewCold"
        android:layout_width="@dimen/settings_color_wheel"
        android:layout_height="@dimen/settings_color_wheel"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/color_wheel_description"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHot"
        app:srcCompat="@mipmap/ic_color_wheel" />

    <Button
        android:id="@+id/buttonSave"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
